# rafi-1st

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  README.md  build.ninja
.github/workflows/: run-emu-test.yml  run-test.yml  run-verilator.yml
Modules/DivUnit/: metabuild.json
Modules/DivUnit/Sources/: DivUnit.sv
Modules/Led7seg/Sources/: Led7segDecoder.sv
Modules/Led7seg/Synthesis/: Blink_10M50A.sv
Modules/Memory/: BlockRam.sv  FlipFlopCam.sv  InternalMemory.sv  InternalSdram.sv  SdramController.sv
Modules/MulUnit/: metabuild.json
Modules/Reset/: ResetSequencer.sv
Modules/Timer/test/: testTimer.cpp
Modules/Tlb/: TlbReplacer.sv
Modules/Uart/: metabuild.json
Modules/Uart/Sources/: UartInput.sv  UartMemoryTestUnit.sv  UartSdramTestUnit.sv  UartTx.sv  UartTxTestUnit.sv
Modules/Uart/Synthesis/: UartInputTop.sv  UartMemoryTop.sv  UartSdRam_DE0CV.sv
Processor/: metabuild.json
Processor/Sources/: BypassLogic.sv  BypassLogicIF.sv  ControlStatusRegister.sv  ControlStatusRegisterIF.sv  Core.sv  DecodeStage.sv  ExecuteStage.sv  FetchStage.sv  FetchStageIF.sv  MemoryAccessStage.sv  PipelineController.sv  PipelineControllerIF.sv  RegFile.sv  RegFileIF.sv  RegReadStage.sv  System.sv
Processor/Sources/FetchUnit/: FetchUnit.sv  FetchUnitIF.sv  ICacheInvalidater.sv  ICacheReplacer.sv  metabuild.json
Processor/Sources/LoadStoreUnit/: DCacheReplacer.sv  LoadStoreUnit.sv  metabuild.json
Processor/Sources/MemoryAccessArbiter/: MemoryAccessArbiter.sv  MemoryAccessArbiterIF.sv
Processor/Synthesis/: System1st.sv
Processor/Tests/SystemTest/: SystemTest.sv
Processor/Tests/SystemTestWithLoad/: SystemTestWithLoad.sv  vsim.macro
Scripts/: CompareTrace.sh  MetaBuild.sh  ParseLinuxTrace.sh  RunEmulatorWithAllDump.sh  RunSystemTest.sh  RunUnitTestGui.sh
TargetPrograms/Sources/: StoreImmediate.S
Tools/: BinaryToText.py  CheckCopyright.py  MetaBuild.py  RunTestOnPc.py
cpu/package/: ProcessorTypes.sv
cpu/src/: BypassLogic.sv  BypassLogicIF.sv  ControlStatusRegister.sv  Core.sv  ExecuteStage.sv  ExecuteStageIF.sv  MemoryAccessStage.sv  MemoryAccessStageIF.sv  PipelineControllerIF.sv  RegReadStageIF.sv  RegWriteStage.sv  System.sv  SystemInternalMemory.sv
cpu/src/BusAccessUnit/: BusAccessUnit.sv  BusAccessUnitIF.sv
cpu/src/FetchUnit/: FetchUnit.sv
cpu/src/LoadStoreUnit/: DCacheReplacer.sv  LoadStoreUnit.sv  LoadStoreUnitIF.sv  metabuild.json
cpu/src/MemoryAccessArbiter/: MemoryAccessArbiterIF.sv
cpu/test/: test_Core.cpp
cpu/test/Core/: Dumper.cpp  Dumper.h  Main.cpp  Memory.cpp  Memory.h  Option.cpp  Option.h  System.cpp  System.h
deprecated/: Rules.ninja  build.ninja
deprecated/tool/: MetaBuild.py  run_zephyr.py
deprecated/tool/rafi/: __init__.py  metabuild.py  riscv_tests.py
firmware/: metabuild.json  rafi.dts
firmware/src/: StoreImmediateLong.S  StoreToUart.S
include/rafi/: common.h  emu.h  op.h  test.h  trace.h
include/rafi/common/: Decoder.h  OpApi.h  OpDeprecated.h  RvApi.h  RvPageTable.h
include/rafi/emu/: BasicTypes.h  Bus.h  IIo.h  IMemory.h  Macro.h  Ram.h  Rom.h
include/rafi/op/: OpCommon.h  OpDecoder.h  RV32A.h  RV32C.h  RV32D.h  RV32F.h  RV32I.h  RV32M.h  RV64A.h  RV64C.h  RV64D.h  RV64F.h  RV64I.h  RV64M.h
include/rafi/test/: ModuleTest.h
include/rafi/trace/: BinaryCycleBuilder.h  CycleTypes.h  EventTypes.h  ICycle.h  ILoggerTarget.h  Logger.h  LoggerConfig.h  TraceJsonPrinter.h  TraceShortPrinter.h  TraceUtil.h
module/DivUnit/: metabuild.json
module/DivUnit/src/: DivUnit.sv
module/DivUnit/test/: test_DivUnit.cpp
module/Memory/: SdramController.sv
module/Timer/: Timer.sv
module/Tlb/: Tlb.sv  TlbReplacer.sv
module/Tlb/package/: TlbTypes.sv
module/Uart/: metabuild.json
module/Uart/src/: UartTx.sv
module/Uart/synth/: UartTx_10M50A.sv
module/package/: RvTypes.sv
script/: CompareTrace.sh  MetaBuild.sh  RunEmulator.sh  RunLinux.sh  RunSystemTest.sh  RunSystemTestGui.sh  RunSystemTestWithLoadGui.sh  RunUnitTest.sh  RunUnitTestGui.sh  build_debug.sh  build_gtest.sh  build_release.sh  build_verilator.sh  common.sh.inc  diff_riscv_tests.sh  diff_zephyr.sh  dump_riscv_tests.sh  run_diff.sh  run_emu_riscv_tests.sh  run_emu_test.sh  run_sim_riscv_tests.sh  run_test_core.sh  run_verilator.sh  run_verilator_test.sh  run_vtest.sh  run_zephyr.sh
src/fw/: StoreToUartLong.S  metabuild.json
src/hw/cache/: DCache.sv  DCacheReplacer.sv  DCacheTest.cpp  ICache.sv  ICacheInvalidater.sv  ICacheReplacer.sv  ICacheTest.cpp  Tlb.sv  TlbArray.sv  TlbTest.cpp
src/hw/core/: BlockRam.sv  BranchUnit.sv  BusAccessUnit.sv  BusAccessUnitIF.sv  BypassLogic.sv  BypassLogicIF.sv  ControlStatusRegister.sv  Core.sv  CoreTest.cpp  Csr.sv  CsrIF.sv  DCacheReplacer.sv  DecodeStage.sv  DecodeStageIF.sv  DivUnit.sv  ExecuteStage.sv  ExecuteStageIF.sv  FetchAddrGenerateStage.sv  FetchAddrGenerateStageIF.sv  FetchAddrTranslateStage.sv  FetchAddrTranslateStageIF.sv  FetchPipeController.sv  FetchPipeControllerIF.sv  FetchStage.sv  FetchUnit.sv  FetchUnitIF.sv  FetchUnitInvalidater.sv  FlipFlopCam.sv  ICacheInvalidater.sv  ICacheReadStage.sv  ICacheReadStageIF.sv  ICacheReplacer.sv  InsnBuffer.sv  InsnBufferIF.sv  InsnTraverseStage.sv  InterruptController.sv  InterruptControllerIF.sv  LoadStoreUnit.sv  LoadStoreUnitIF.sv  LoadValueUnit.sv  (+15 more)
src/hw/cpu/: metabuild.json
src/hw/def/: BasicTypes.sv  CacheTypes.sv  Decoder.sv  DecoderRV32C.sv  MemoryTypes.sv  OpTypes.sv  ProcessorTypes.sv  RafiTypes.sv  Rv32Types.sv  RvTypes.sv  TraceTypes.sv
src/hw/div/: DivUnit.sv  DivUnitTest.cpp
src/hw/fp/: Fp32Comparator.sv  Fp32ComparatorTest.cpp  Fp32DivUnit.sv  Fp32DivUnitTest.cpp  Fp32MulAdd.sv  Fp32MulAddTest.cpp  Fp32SqrtUnit.sv  Fp32SqrtUnitTest.cpp  Fp64Comparator.sv  Fp64ComparatorTest.cpp  Fp64DivUnit.sv  Fp64DivUnitTest.cpp  Fp64MulAdd.sv  Fp64MulAddTest.cpp  Fp64SqrtUnit.sv  FpDivUnit.sv  (+21 more)
src/librafi_trace/: TraceBinaryReaderImpl.cpp
src/rafi-emu/: TraceLogger.h
test/: emu_riscv_tests.config.json  sim_riscv_tests.config.json
tool/: RunTestOnPc.py  diff_riscv_tests.py  diff_zephyr.py  run_linux.py  run_riscv_tests.py  run_zephyr.py
(+93 files in other folders)
